<resources>
    <string name="app_name">Checkers</string>

    <string name="settingsActivity_prefCategory_gameRules">Game Rules</string>
    <string name="settingsActivity_prefCategory_gameStyle">Game Style</string>
    <string name="settingsActivity_prefCategory_customSettings">Custom Game Setting</string>

    <string name="settingsActivity_toastMessage_premiumFeature">This feature is available only in premium version. Get it now!</string>
    <string name="settingsActivity_toastMessage_premiumTheme">This theme is available only in premium version. Get it now!</string>


    <string name="mainActivity_sideDrawerHeader_title">Checkers Unlimited</string>
    <string name="mainActivity_sideDrawerHeader_subtitle">Made with ♡ by ArealApps</string>

    <string name="mainActivity_sideDrawerMenuItem_rateUs">Rate Checkers</string>
    <string name="mainActivity_sideDrawerMenuItem_purchasePremiumVersion">Upgrade To Premium</string>
    <string name="mainActivity_sideDrawerMenuItem_purchaseNoAds">Remove All Ads</string>
    <string name="mainActivity_sideDrawerMenuItem_contactUs">Contact Us</string>
    <string name="mainActivity_sideDrawerMenuItem_sendFeedback">Send Quick Feedback</string>
    <string name="mainActivity_sideDrawerMenuItem_privacyPolicy">Privacy Policy</string>
    <string name="mainActivity_sideDrawerMenuItem_settings">Settings</string>


    <string name="settingsActivity_prefTitle_kingBehaviour">King\'s behaviour</string>
    <string name="settingsActivity_prefTitle_canPawnCaptureBackwards">Can Pawn capture backwards</string>
    <string name="settingsActivity_prefTitle_isCapturingMandatory">Is capturing mandatory</string>

    <string name="settingsActivity_prefTitle_boardSize">Board size</string>
    <string name="settingsActivity_prefTitle_boardTheme">Board theme</string>
    <string name="settingsActivity_prefTitle_playersTheme">Players theme</string>
    <string name="settingsActivity_prefTitle_soundEffectsTheme">Sound effects theme/ off</string>

    <string name="settingsActivity_prefTitle_enableCustomSettings">Enable custom game settings</string>
    <string name="settingsActivity_prefTitle_customBoardSize">Custom board size</string>
    <string name="settingsActivity_prefTitle_startingRows">Starting soldier rows for each player</string>

    <string name="settingsActivity_prefTitle_purchasePremiumVersion">Upgrade To Premium</string>
    <string name="settingsActivity_prefTitle_purchaseNoAds">Remove All Ads</string>


    <string name="mainActivity_newGameDialog_title">New Game</string>
    <string name="mainActivity_newGameDialog_confirm">Start Game!</string>

    <string name="mainActivity_newGameDialog_selectDifficulty">Difficulty:</string>
    <string name="mainActivity_newGameDialog_selectPlayer">Player</string>
    <string name="mainActivity_newGameDialog_selectStartingPlayer">Starting Player</string>
    <string name="mainActivity_newGameDialog_userPlaysFirst">User plays first</string>
    <string name="mainActivity_newGameDialog_selectGameType">Game Type</string>

    <string name="mainActivity_newGameDialog_selectGameType_singlePlayer">Single Player</string>
    <string name="mainActivity_newGameDialog_selectGameType_multiplayer">Multiplayer</string>
    <string name="mainActivity_newGameDialog_selectGameType_bonusVirtualGame">Bonus! Virtual Game</string>

    <string name="mainActivity_configHasChangedWarningDialog_message">Board settings was changed. Start a new game?</string>

    <string name="dialog_thanksForPurchasing_noAds_message">Thanks for purchasing! Enjoy no ads forever!</string>
    <string name="dialog_thanksForPurchasing_premiumVersion_message">Thanks for purchasing! Enjoy your premium version!\nCheck out all the awesome perks on settings</string>

    <string name="general_dialog_cancel">Cancel</string>
    <string name="general_dialog_ok">OK</string>


    <string name="onboardingActivity_buttonNext">Next</string>
    <string name="onboardingActivity_buttonPrev">Back</string>
    <string name="onboardingActivity_buttonFinish">Get Started</string>



    <string name="noAds_descriptionHeader">Remove All Ads</string>
    <string name="noAds_feature">Removing all ads, forever!!</string>
    <string name="noAds_purchaseButton">Remove All Ads - @pr</string>

    <string name="premiumVersion_descriptionHeader">Get Premium Version</string>
    <string name="premiumVersion_descriptionHeaderaa">With purchasing premium version, you will get:</string>
    <string name="premiumVersion_feature_0">Custom board size (4x4 up to 24X24)</string>
    <string name="premiumVersion_feature_1">Custom starting players</string>
    <string name="premiumVersion_feature_2">All board themes</string>
    <string name="premiumVersion_feature_3">All pieces themes</string>
    <string name="premiumVersion_feature_4">Virtual player bonus (Secret!)</string>
    <string name="premiumVersion_purchaseButton">Get Full Version - @pr</string>


    <string name="purchaseButtonHint">Purchase once, Lasts forever</string>
    <string name="alreadyPurchased">Already Purchased</string>
    <string name="purchasingNotAvailable">Sorries! Purchasing is not available right now.\nCheck your internet connection or try again later</string>

    <string name="sendFeedbackDialog_title">Send Feedback</string>
    <string name="sendFeedbackDialog_desc">Thanks for sharing, please write your feedback below:</string>
    <string name="sendFeedbackDialog_submitButton">Send Feedback</string>
    <string name="sendFeedbackDialog_approved">Thank you, feedback was sent!</string>

    <string name="confirmPassTurnDialog_message">Are you sure you want to pass your turn?</string>
    <string name="confirmPassTurnDialog_button_passTurn">Pass Turn</string>


    <string name="rateUsDialog_header">How would you rate Checkers app?</string>
    <string name="rateUsDialog_button_later">Later</string>
    <string name="rateUsDialog_button_dontShowAgain">Never</string>
    <string name="rateUsDialog_button_rateInAppStore">Rate</string>
    <string name="rateUsDialog_button_sendFeedBack">Send</string>
    <string name="rateUsDialog_positiveRatingResponse">Thanks! ❤\nCare to rate us in the app store?</string>
    <string name="rateUsDialog_negativeRatingResponse">We are sorry to hear that ☹\nCan you write us a short feedback telling us why?</string>

    <string name="toolbar_title_noGameLoaded">Checkers</string>
    <string name="toolbar_title_firstPlayersTurn">Player1 turn</string>
    <string name="toolbar_title_secondPlayersTurn">Player2 turn</string>
    <string name="toolbar_title_userTurn">Your turn</string>
    <string name="toolbar_title_pcTurn">PC\'s turn</string>
    <string name="toolbar_title_userWon">You won!</string>
    <string name="toolbar_title_userLost">You Lost</string>
    <string name="toolbar_title_firstPlayerIsWinner">Player1 Won</string>
    <string name="toolbar_title_secondPlayerIsWinner">Player2 Won</string>



<!--    for onboarding-->
    <string name="can_pawn_capture_backwards_question">Can Pawn (normal piece) capture backwards?</string>
    <string name="king_behaviour_question">How kings moves?</string>
    <string name="king_behaviour_flying_kings_desc">Can move by any distance</string>
    <string name="king_behaviour_lands_after_capture_desc">Can jump by any distance, but when capturing, it must land after the captured piece</string>
    <string name="king_behaviour_no_flying_kings_desc">like normal soldier- moves or captures by nearest tile</string>
    <string name="is_capturing_mandatory_question">Is capturing mandatory?</string>
    <string name="is_capturing_mandatory_yes">Mandatory</string>
    <string name="is_capturing_mandatory_no">Not mandatory</string>
    <string name="is_capturing_mandatory_no_desc">Passing extra turns is also allowed</string>


    <string name="onboarding_bottomMessage">You can always change this on settings</string>
    <string name="onboarding_page1_titleA">Welcome to</string>
    <string name="onboarding_page1_titleB">Ultimate Checkers</string>
    <string name="onboarding_page1_bodyA">Everyone plays checkers a little different,\nSo first, let us configure your board.</string>
    <string name="onboarding_page1_bodyB">Choose how you normally play</string>
    <string name="onboarding_page2_title">Is capturing mandatory?</string>
    <string name="onboarding_page2_titleDesc">Do you have to capture your opponent\'s piece when it\'s available?</string>
    <string name="onboarding_page2_optionA">Yes, it\'s mandatory</string>
    <string name="onboarding_page2_optionB">No, it\'s not mandatory</string>
    <string name="onboarding_page3_title">King\'s Behaviour</string>
    <string name="onboarding_page3_titleDesc">How do kings jump and capture?</string>
    <string name="onboarding_page3_optionA">Flying Kings</string>
    <string name="onboarding_page3_optionA_desc">King can jump and land anywhere</string>
    <string name="onboarding_page3_optionB">Lands After Capture</string>
    <string name="onboarding_page3_optionB_desc">Like flying kings, but when captures, it always lands right after the captured piece</string>
    <string name="onboarding_page3_optionC">No Flying Kings</string>
    <string name="onboarding_page3_optionC_desc">King can jump only 1 tile per turn, and always lands right after the captured piece. Difference than regular pawn is that it can move backwards</string>
    <string name="onboarding_page4_title">Can pawn capture backwards?</string>
    <string name="onboarding_page4_titleDesc">Can pawn (normal piece) capture backwards?</string>
    <string name="onboarding_page4_optionA">Yes, always (not common)</string>
    <string name="onboarding_page4_optionB">No, never</string>
    <string name="onboarding_page4_optionC">Yes, but only when multi-capture</string>
    <string name="onboarding_page4_optionC_desc">If your\'e eating double, you can capture backwards (starting from the second capture)</string>
    <string name="onboarding_page5_title">What\'s your board size?</string>
    <string name="onboarding_page5_titleDesc">In what board you normally play?</string>
    <string name="onboarding_page5_optionA">8x8 board (most popular)</string>
    <string name="onboarding_page5_optionB">10x10 board</string>
    <string name="onboarding_page5_optionC">12x12 board</string>
    <string name="onboarding_page6_title">That\'s it!"</string>
    <string name="onboarding_page6_titleDesc">Finally, choose your pieces theme</string>
    <string name="onboarding_page6_titleDesc2">More themes are in options menu,\nbe sure to check them out!</string>

    <string-array name="settingsActivity_prefEntries_boardSizeCustom">
        <item>4x4</item> <item>6x6</item>
        <item>8x8</item> <item>10x10</item>
        <item>12x12</item> <item>14x14</item>
        <item>16x16</item> <item>18x18</item>
        <item>20x20</item> <item>22x22</item>
        <item>24x24</item>
    </string-array>

    <string-array name="settingsActivity_prefEntries_boardSizeRegular">
        <item>8x8</item>
        <item>10x10</item>
        <item>12x12</item>
    </string-array>

    <string-array name="mainActivity_newGameDialog_difficultyEntries">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="settingsActivity_prefEntries_kingBehaviour">
        <item>Flying kings</item>
        <item>Lands after capture</item>
        <item>No flying kings</item>
    </string-array>

    <string-array name="settingsActivity_prefEntries_canPawnCaptureBackwards">
        <item>Always</item>
        <item>Only when capturing multiple pieces</item>
        <item>Never</item>
    </string-array>


</resources>
